--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,34 @@
 [build-system]
-requires = ["setuptools>=64.0.0", "wheel"]
+requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tools"
+name = "aidapta"
+version = "0.0.1"
 authors = [
     {name = "Manuel Garcia", email = "manu@own.edu"},
 ]
 description = "My package description"
-readme = "README.rst"
+readme = "README.md"
 requires-python = ">=3.10"
 keywords = ["one", "two"]
 license = {text = "BSD-3-Clause"}
-classifiers = [
-    "Framework :: PDF",
-    "Programming Language :: Python :: 3",
+classifiers = ["Development Status :: 3 - Alpha",
+ "Environment :: Python",
+ "Intended Audience :: Science/Research",
+ "Operating System :: OS Independent",
+ "Programming Language :: Python :: 3",
 ]
 dependencies = [
     "PyPDF2", 
+    "requests",
+    "pdfminer.six",
     "PyMuPDF",
-    'importlib-metadata; python_version<"3.8"',
 ]
-dynamic = ["version"]
 
 [tool.pytest.ini_options]
 pythonpath = "src"
 addopts = [
     "--import-mode=importlib",
 ]
+
