--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel"]
+requires = ["setuptools>=59.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -8,7 +8,7 @@ version = "0.0.1"
 authors = [
     {name = "Manuel Garcia", email = "manu@own.edu"},
 ]
-description = "My package description"
+description = "data pipelines for extraction of architectural visuals"
 readme = "README.md"
 requires-python = ">=3.10"
 keywords = ["one", "two"]
@@ -20,10 +20,12 @@ classifiers = ["Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
 ]
 dependencies = [
+    "Pillow",
     "PyPDF2", 
     "requests",
     "pdfminer.six",
     "PyMuPDF",
+    "beautifulsoup4",
 ]
 
 [tool.pytest.ini_options]
