ignore data folders

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ data/4Manuel_MODS.xml
 data/actual-data/
 data/design-data100/
 data/results-artifacts/
+data/tmp/
+data/detect/
 
 img/
 data/student-data/
