--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = ["Development Status :: 3 - Alpha",
 dependencies = [
     "Pillow",
     "requests",
-    "pdfminer.six",
+    "pdfminer.six[image]",
     "beautifulsoup4",
     "shapely",
     "pandas",
