Update project version and description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,24 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "visarchpy"
-version = "0.4.0"
+version = "1.0.0"
 authors = [
     {name = "Manuel Garcia", email = "m.g.garciaalvarez@tudelft.nl"},
 ]
-description = "data pipelines for extraction of architectural visuals"
+description = "Data pipelines for extraction and visual analysis of architectural visuals in Python."
 readme = "README.md"
 requires-python = ">=3.10"
-keywords = ["one", "two"]
-license = {text = "BSD-3-Clause"}
-classifiers = ["Development Status :: 3 - Alpha",
+keywords = ["data pipelines", "visuals", "architecture",
+            "pdf", "ETL", "computer vision", "dino", "TU Delft"]
+license = {text = "MIT"}
+classifiers = ["Development Status :: 5 - Production/Stable",
  "Environment :: Python",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
+ "Environment :: Console",
+ "Framework :: Pytest",
+ "License :: OSI Approved :: MIT License"
 ]
 dependencies = [
     "Pillow",
