--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,16 @@ dependencies = [
     "scikit-learn",
 ]
 
+[project.optional-dependencies]
+  dev = [
+    "pytest",
+    "Sphinx",
+    "sphinx-rtd-theme",
+    "sphinxcontrib-bibtex>=2.5.0",
+    "sphinx-copybutton==0.5.2",
+    "nbsphinx>=0.9.2",
+  ]
+
 [tool.pytest.ini_options]
 pythonpath = "src"
 addopts = [
