--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,14 @@ keywords = ["data pipelines", "visuals", "architecture",
             "pdf", "ETL", "computer vision", "dino", "TU Delft"]
 license = {text = "MIT"}
 classifiers = ["Development Status :: 5 - Production/Stable",
- "Environment :: Python",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Framework :: Pytest",
- "License :: OSI Approved :: MIT License"
+ "License :: OSI Approved :: MIT License",
+ "Intended Audience :: Science/Research",
+ "Topic :: Utilities",
 ]
 dependencies = [
     "Pillow",
@@ -49,6 +50,11 @@ dependencies = [
     "sphinx-copybutton==0.5.2",
     "nbsphinx>=0.9.2",
   ]
+
+[project.urls]
+Documentation = "https://visarchpy.readthedocs.io"
+Repository = "https://github.com/AiDAPT-A/VisArchPy.git"
+"Bug Tracker" = "https://github.com/AiDAPT-A/VisArchPy/issues"
 
 [tool.pytest.ini_options]
 pythonpath = "src"
