--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -20,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -38,7 +38,7 @@ jobs:
     - name: Install PyTorch
       run: |
         # Install CPU-based pytorch
-        pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+        pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
     - name: Run Tests
       run: |
         pytest
