--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,13 +1,17 @@
 # This workflow will install Python dependencies and run tests using Pytests
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Run-tests
+name: Unit tests
 
 on:
   push:
     branches: [ "main" ]
+    paths:
+    - src
   pull_request:
     branches: [ "main" ]
+    paths:
+    - src
 
 permissions:
   contents: read
