--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "Sphinx",
     "sphinx-rtd-theme",
     "sphinx-copybutton==0.5.2",
+    "sphinx-tabs==3.4.4",
 ]
 
 [project.urls]
