Update version to 1.0.3 and include src/visarchpy in package data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "visarchpy"
-version = "1.0.2"
+version = "1.0.3"
 authors = [
     {name = "Manuel Garcia", email = "m.g.garciaalvarez@tudelft.nl"},
 ]
@@ -51,6 +51,9 @@ dependencies = [
     "sphinx-copybutton==0.5.2",
     "sphinx-tabs==3.4.4",
 ]
+
+[tool.setuptools.package-data]
+visarchpy = ['src/visarchpy']
 
 [project.urls]
 Documentation = "https://visarchpy.readthedocs.io"
