--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -10,5 +10,4 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
 visarchpy @ git+https://github.com/AiDAPT-A/VisArchPy@main
---index-url https://download.pytorch.org/whl/cpu
-torch
+torch @ https://download.pytorch.org/whl/cpu
