--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,7 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
+torchvision
+torchaudio
 Sphinx==7.2.6
 sphinx-copybutton==0.5.2
 sphinx-rtd-theme==1.3.0
@@ -10,4 +14,3 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
 visarchpy @ git+https://github.com/AiDAPT-A/VisArchPy@main
-torch @ https://download.pytorch.org/whl/cpu
